--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@metamask/detect-provider": "^2.0.0",
-    "bootstrap": "^5.3.3",
-    "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4",
-    "web3": "^4.16.0"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.2",
+    "@metamask/detect-provider": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,6 +21,10 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "8.x"
   },
   "browserslist": {
     "production": [
