--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     ]
   },
   "sourceMapLoaderOptions": {
-    "exclude": ["node_modules"]
+    "exclude": [
+      "node_modules"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
   }
 }
