--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
-    "web3": "^1.8.2"
+    "web3": "^1.8.2",
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
