--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3-onboard/injected-wallets": "^2.11.2",
+    "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
@@ -21,11 +22,11 @@
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
-  "start": "react-app-rewired start",
-  "build": "react-app-rewired build",
-  "test": "react-app-rewired test",
-  "eject": "react-scripts eject"
-},
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
