--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@web3-onboard/injected-wallets": "^2.11.2",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.2",
     "web3modal": "^1.9.12",
