--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "url": "^0.11.4",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.2",
