--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3-onboard/injected-wallets": "^2.11.2",
     "assert": "^2.1.0",
+    "axios": "^1.7.9",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "ethers": "^6.13.4",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
