--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 GENERATE_SOURCEMAP=false
 NODE_OPTIONS=--no-deprecation
+REACT_APP_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
+REACT_APP_SECRET_KEY=YourSuperSecureSecretKey
 
