--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.9",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.13.4",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
