--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ GENERATE_SOURCEMAP=false
 NODE_OPTIONS=--no-deprecation
 REACT_APP_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
 REACT_APP_SECRET_KEY=YourSuperSecureSecretKey
+REACT_APP_BSCSCAN_API_KEY=HVYMP4JE3IHP4RMF5EYZD2RCSDBZHS4CQD
 
